Fixed #18947, better colors for dark mode in Gantt.

--- a/samples/gantt/demo/styled-mode/demo.css
+++ b/samples/gantt/demo/styled-mode/demo.css
@@ -8,5 +8,4 @@
 .highcharts-treegrid-node-level-1 {
     font-size: 13px;
     font-weight: bold;
-    fill: black;
 }
